--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             const placeIdRegex = /^\d{1,20}$/;
             const jobIdRegex = /^[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}$/i;
 
-            if (placeIdRegex.text(placeId) && jobIdRegex.test(jobId)) {
+            if (placeIdRegex.test(placeId) && jobIdRegex.test(jobId)) {
                 const robloxLink = `roblox://placeID=${placeId}&gameInstanceId=${jobId}`;
                 window.location.href = robloxLink;
                 await sleep(5000);
