--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
             if (placeIdRegex.test(placeId) && jobIdRegex.test(jobId)) {
                 const robloxLink = `roblox://placeID=${placeId}&gameInstanceId=${jobId}`;
-                //window.location.href = robloxLink;
+                window.location.href = robloxLink;
                 await sleep(3000);
                 document.body.innerHTML = "<p>You may now close this window.<br>If Roblox did not launch, please ensure you have it installed.<br><a href='https://www.roblox.com/download/client?os=win'>Download Roblox</a></p>";
             } else {
